--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,19 +4,50 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
+  batch: true
+  branches:
+    include:
+    - '*'
+
+variables:
+- name: PROJECT_PATH
+  value: 'src/webshop-frontend/'
+
+- name: PROJECT_DIST_PATH
+  value: 'src/webshop-frontend/dist/webshop-app/'
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
+
+# stages:
+#  - stage: 'qa'
 
 steps:
+
 - task: NodeTool@0
   inputs:
     versionSpec: '16.x'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install -g @angular/cli
-    npm install
-    ng build --prod
-  displayName: 'npm install and build'
+# BUILD
+# - script: |
+#     cd ${{ variables.PROJECT_PATH}}
+#     npm install -g @angular/cli
+#     npm install
+#     npm run build
+#   displayName: 'npm install and build'
+
+  ## npm build release
+- task: Npm@1
+  displayName: "Build release"
+  inputs:
+    command: "custom"
+    customCommand: "run test"
+    workingDir: ${{ variables.PROJECT_PATH }}
+
+- task: Npm@1
+  displayName: "Build release"
+  inputs:
+    command: "custom"
+    customCommand: "run build"
+    workingDir: ${{ variables.PROJECT_PATH }}
