--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,12 @@ steps:
     versionSpec: '16.x'
   displayName: 'Install Node.js'
 
+- script: |
+    ls -al
+  displayName: 'DEBUG'
+
+
+
 # BUILD
 # - script: |
 #     cd ${{ variables.PROJECT_PATH}}
