Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ steps:
 - script: |
     ls -al
     ls -al ${{ variables.PROJECT_PATH }}
+    ls -al ${{ variables.PROJECT_PATH }}/projects
   displayName: 'DEBUG'
 
 
