Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,12 +38,12 @@ steps:
 
 
 # BUILD
-# - script: |
-#     cd ${{ variables.PROJECT_PATH}}
-#     npm install -g @angular/cli
+- script: |
+    cd ${{ variables.PROJECT_PATH}}
+    npm install -g @angular/cli
 #     npm install
 #     npm run build
-#   displayName: 'npm install and build'
+  displayName: 'npm install and build'
 
   ## npm build release
 
