--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,5 +51,5 @@ steps:
   displayName: "Build release"
   inputs:
     command: "custom"
-    customCommand: "run build"
+    customCommand: "run build webshop-app"
     workingDir: ${{ variables.PROJECT_PATH }}
