--- a/src/webshop-frontend/package.json
+++ b/src/webshop-frontend/package.json
@@ -25,6 +25,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^15.1.2",
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.1",
     "@types/jasmine": "~4.0.0",
