--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -98,40 +98,40 @@ stages:
               customCommand: "run build ${{ variables.APP_NAME }}"
               workingDir: ${{ variables.PROJECT_PATH }}
 
-  # - stage: "publish_stage"
-  #   displayName: "PUBLISH Stage"
-  #   dependsOn: ["qa_stage", "build_app_stage"] # Parallelisierung
-  #   jobs:
-  #     - job: "prepare_job"
-  #       steps:
-  #         - task: NodeTool@0
-  #           inputs:
-  #             versionSpec: "16.x"
-  #           displayName: "Install Node.js"
+  - stage: "publish_stage"
+    displayName: "PUBLISH Stage"
+    dependsOn: ["qa_stage"]
+    jobs:
+      - job: "prepare_job"
+        steps:
+          - task: NodeTool@0
+            inputs:
+              versionSpec: "16.x"
+            displayName: "Install Node.js"
 
-  #         - script: |
-  #             ls -al
-  #             ls -al ${{ variables.PROJECT_PATH }}
-  #             ls -al ${{ variables.PROJECT_PATH }}/projects
-  #           displayName: "DEBUG"
+          - script: |
+              ls -al
+              ls -al ${{ variables.PROJECT_PATH }}
+              ls -al ${{ variables.PROJECT_PATH }}/projects
+            displayName: "DEBUG"
 
-  #         - task: Npm@1
-  #           displayName: "Install"
-  #           inputs:
-  #             command: "custom"
-  #             customCommand: "install"
-  #             workingDir: ${{ variables.PROJECT_PATH }}
+          - task: Npm@1
+            displayName: "Install"
+            inputs:
+              command: "custom"
+              customCommand: "install"
+              workingDir: ${{ variables.PROJECT_PATH }}
 
-  #         - task: Npm@1
-  #           displayName: "Build release"
-  #           inputs:
-  #             command: "custom"
-  #             customCommand: "run build ${{ variables.SHARED_LIB }}"
-  #             workingDir: ${{ variables.PROJECT_PATH }}
+          - task: Npm@1
+            displayName: "Build release"
+            inputs:
+              command: "custom"
+              customCommand: "run build ${{ variables.SHARED_LIB }}"
+              workingDir: ${{ variables.PROJECT_PATH }}
 
-  #         - task: Npm@1
-  #           displayName: "Publish release"
-  #           inputs:
-  #             command: "custom"
-  #             customCommand: "publish ${{ variables.SHARED_LIB_DIST_PATH }}"
-  #             workingDir: ${{ variables.PROJECT_PATH }}
+          - task: Npm@1
+            displayName: "Publish release"
+            inputs:
+              command: "custom"
+              customCommand: "publish ${{ variables.SHARED_LIB_DIST_PATH }}"
+              workingDir: ${{ variables.PROJECT_PATH }}
